[package]
name = "crosswin"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Async-friendly Windows primitives for Rust (MVP: process enumeration)."
readme = "README.md"
repository = "https://github.com/M1tsumi/crosswin"
documentation = "https://docs.rs/crosswin"
keywords = ["windows", "win32", "async", "process"]
categories = ["os::windows-apis", "api-bindings"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
], optional = true }

[features]
default = ["win32", "process", "tokio"]

win32 = ["windows"]
process = []
tokio = []

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
